# phoenix-discovery

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh
.github/: copilot-instructions.md
include/: pn_discovery.h
src/: pn_discovery.c
test/: test_discovery.c
